feat: 구독 채팅방 리스트 서비스 세부 로직 작성